--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>JavaScript Images</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <div class="cont">
