--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <div class="cont">
         <h1>All Apple Iphone's</h1>
-        <button onClick="random();">Click for change images</button>
-        <p id="one"></p>
+        <button onClick="random();">Click For Change Image</button>
+        <div id="one"></div>
     </div>    
     <script src="app.js"></script>
 </body>
