--- a/index.html
+++ b/index.html
@@ -7,10 +7,18 @@
 </head>
 <body>
     <div class="cont">
-        <h1>All Apple Iphone's</h1>
-        <button onClick="random();">Click For Change Image</button>
-        <div id="one"></div>
-    </div>    
+        <div class="logo">
+        <img src="images/apple2.jpg" height="200px" width="200px">
+        <h1>Apple Iphone's</h1>
+        <button onClick="random();">Click For Next iPhone</button>
+        </div>
+        <div id="one">
+            <p>This is 7. </p>
+            <p> Introducing Year 2016</p>
+            <img id="one" src='images/iphone7.jpg' width='538' height='406'>
+        </div>
+    </div>
+    <footer>&copy;&nbsp;Hammad Hassan</footer>    
     <script src="app.js"></script>
 </body>
 </html>
