--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="cont">
         <div class="logo">
         <img src="images/apple2.jpg" height="200px" width="200px">
-        <h1>Apple Iphone's</h1>
+        <h1>Apple iPhone's</h1>
         <button onClick="random();">Click For Next iPhone</button>
         </div>
         <div id="one">
